<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zkejid.constructor</groupId>
    <artifactId>core</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>

    <description>Constructor - is a framework that supports modular development of applications.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>core-impl</module>
        <module>core-api</module>
        <module>core-helloworld</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.zkejid.constructor</groupId>
                <artifactId>core-api</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.zkejid.constructor</groupId>
                <artifactId>core-impl</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.zkejid.constructor</groupId>
                <artifactId>javasdk-system-api</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.zkejid.constructor</groupId>
                <artifactId>javasdk-system-impl</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.6.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>